--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <artifactId>bridgelabzjunit</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
-	  <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.13.2</version>
+	 <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.10.1</version>
     <scope>test</scope>
 </dependency>
   </dependencies>
