--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,17 @@
   <dependencies>
 	 <dependency>
     <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-params</artifactId>
+    <version>5.10.1</version>
+    <scope>test</scope>
+</dependency>
+ <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-api</artifactId>
     <version>5.10.1</version>
     <scope>test</scope>
 </dependency>
+
   </dependencies>
 </project>
